updating the  toList with Collectors.ToList